[desktop] Force grayscale Swing text on Linux
Swing text resolves LCD-vs-grayscale from the awt.font.desktophints desktop property, ignoring per-Graphics hints (double-buffered offscreen graphics never see them), so table paints rasterized every glyph via the native subpixel rasterizer at ~3x grayscale cost. Override the property at startup on Linux; other desktop hints preserved, failures leave hints untouched.

opencode/muse-spark-1.3-contributor-free